[WiP] append messages to redis set

--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
     <script src="http://code.jquery.com/jquery-1.11.3.js"></script>
     <script src="/socket.io.js"></script>
-    <script>
-
-    </script>
+    <script src="/client.js"></script>
 
   </body>
 </html>
