--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Socket.IO chat</title>
+    <title>Chat</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
@@ -11,15 +11,22 @@
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
+      #joiners {  height: 2em; color: grey; padding: 1em;}
+      #joined  { color: green; }
+      .time { color: grey; }
+      .name { color: blue; }
     </style>
   </head>
   <body>
+    <h2 id='joiners'> <i id='joined'>You </i> joined the chat!</h2>
     <ul id="messages"></ul>
     <form action="">
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
 
     <script src="http://code.jquery.com/jquery-1.11.3.js"></script>
+    <script src="https://cdn.rawgit.com/ScottHamper/Cookies/1.2.1/dist/cookies.min.js">
+    </script>
     <script src="/socket.io.js"></script>
     <script src="/client.js"></script>
 
