adds http://flatuicolors.com/ and splits css out into style.css

--- a/index.html
+++ b/index.html
@@ -2,20 +2,7 @@
 <html>
   <head>
     <title>Chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-      #joiners {  height: 2em; color: grey; padding: 1em;}
-      #joined  { color: green; }
-      .time { color: grey; }
-      .name { color: blue; }
-    </style>
+    <link rel="stylesheet" href="/style.css">
   </head>
   <body>
     <h2 id='joiners'> <i id='joined'>You </i> joined the chat!</h2>
@@ -24,7 +11,7 @@
       <input id="m" autocomplete="off" /><button>Send</button>
     </form>
 
-    <script src="http://code.jquery.com/jquery-1.11.3.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     <script src="https://cdn.rawgit.com/ScottHamper/Cookies/1.2.1/dist/cookies.min.js">
     </script>
     <script src="/socket.io.js"></script>
