wraps client code in document.ready function. adds favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>Chat</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon"
+      type="image/png"
+      href="https://i.imgur.com/84ZFT7V.png">
   </head>
   <body>
     <h2 id='joiners'> <i id='joined'>You </i> joined the chat!</h2>
