Restructures CSS. Fixes https://github.com/dwyl/hapi-socketio-redis-chat-example/issues/27

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <ul id="messages"></ul>
     
     <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
+      <input id="m" autocomplete="off" />
+      <button>Send</button>
     </form>
     
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
