--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
     <script src="https://cdn.rawgit.com/ScottHamper/Cookies/1.2.1/dist/cookies.min.js">
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.6/socket.io.min.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="/client.js"></script>
   </body>
 </html>
