--- a/elm/index.html
+++ b/elm/index.html
@@ -7,8 +7,12 @@
   <title>Chat</title>
   <link rel="stylesheet" href="css/tachyons.min.css">
   </head>
-  <body class="helvetica dark-gray">
+  <body>
     <div id="app"></div>
     <script src="js/app.js"></script>
+    <script>
+    var node = document.getElementById('app');
+    var app = Elm.Main.embed(node);
+    </script>
   </body>
 </html>
