makes message input fixed and adds new height class to tachyons #86 #94

--- a/elm/index.html
+++ b/elm/index.html
@@ -14,5 +14,6 @@
     var node = document.getElementById('app');
     var app = Elm.Main.embed(node);
     </script>
+    <style> .h3_5 { height: 5rem; } </style>
   </body>
 </html>
