--- a/elm/index.html
+++ b/elm/index.html
@@ -12,8 +12,8 @@
     <script src="js/app.js"></script>
     <script>
     var node = document.getElementById('app');
-    var app = Elm.Main.embed(node);
-    </script>
-    <style> .h3_5 { height: 5rem; } </style>
+var app = Elm.Main.embed(node);
+</script>
+    <style> .h3_5 { height: 5rem; } .pb5rem { padding-bottom: 5rem} </style>
   </body>
 </html>
