--- a/elm/index.html
+++ b/elm/index.html
@@ -1,27 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-   <meta charset="utf-8">
+
+<head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Chat</title>
   <link rel="stylesheet" href="css/tachyons.min.css">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="js/app.js"></script>
-    <script>
-    var node = document.getElementById('app');
-    var storedName = localStorage.getItem('name');
+</head>
 
-    var name = null;
+<body>
+  <div id="app"></div>
+  <script src="js/app.js"></script>
+  <script>
+  var node = document.getElementById('app');
+var storedName = localStorage.getItem('name');
 
-    var app = Elm.Main.embed(node, storedName ? storedName : null);
+var name = null;
 
-    app.ports.setName.subscribe(function(name) {
-      localStorage.setItem('name', name);
-    });
+var app = Elm.Main.embed(node, storedName ? storedName : null);
+
+app.ports.setName.subscribe(function(name) {
+  localStorage.setItem('name', name);
+});
 </script>
-    <style> .h3_5 { height: 5rem; } .pb5rem { padding-bottom: 5rem} </style>
-  </body>
+  <style>
+    .h3_5 {
+      height: 5rem;
+    }
+
+    .pb5rem {
+      padding-bottom: 5rem
+    }
+
+    .animation {
+      animation-name: fade-out;
+      animation-duration: 2s;
+      animation-timing-function: ease-in;
+    }
+
+    @keyframes fade-out {
+      from {
+        background-color: #f4f4f4;
+      }
+      to {
+        background-color: white;
+      }
+    }
+  </style>
+</body>
+
 </html>
