--- a/elm/index.html
+++ b/elm/index.html
@@ -11,19 +11,7 @@
 
 <body>
   <div id="app"></div>
-  <script src="js/app.js"></script>
-  <script>
-  var node = document.getElementById('app');
-var storedName = localStorage.getItem('name');
 
-var name = null;
-
-var app = Elm.Main.embed(node, storedName ? storedName : null);
-
-app.ports.setName.subscribe(function(name) {
-  localStorage.setItem('name', name);
-});
-</script>
   <style>
     .h3_5 {
       height: 5rem;
@@ -48,6 +36,9 @@ app.ports.setName.subscribe(function(name) {
       }
     }
   </style>
+  <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/javascript.js"></script>
 </body>
 
 </html>
