adds scroll to bottom on new message #86

--- a/elm/index.html
+++ b/elm/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/tachyons.min.css">
 </head>
 
-<body>
+<body id="container">
   <div id="app"></div>
 
   <style>
