adds favicon link elm/index.html to fix https://github.com/dwyl/hapi-socketio-redis-chat-example/pull/91#discussion_r125273975

--- a/elm/index.html
+++ b/elm/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Chat</title>
+  <link rel="icon"
+    type="image/png"
+    href="https://i.imgur.com/84ZFT7V.png">
   <link rel="stylesheet" href="css/tachyons.min.css">
 </head>
 
