--- a/elm/index.html
+++ b/elm/index.html
@@ -9,7 +9,7 @@
   <link rel="icon"
     type="image/png"
     href="https://i.imgur.com/84ZFT7V.png">
-  <link rel="stylesheet" href="css/tachyons.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css">
 </head>
 
 <body id="container">
