--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
   <head>
     <title>Chat</title>
     <link rel="stylesheet" href="/style.css">
-    <link rel="icon"
-      type="image/png"
-      href="https://i.imgur.com/84ZFT7V.png">
+  <link rel="icon" type="image/png" href="https://www.dwyl.com/img/favicon.ico">
   </head>
   <body>
     <h2 id='joiners'> <i id='joined'>You </i> joined the chat!</h2>
